push for presentation day

--- a/index.html
+++ b/index.html
@@ -9,15 +9,50 @@
 </head>
 <body>
 <div class="header">
-
+    <a href="pizza/pizza.html"><img id="pizza-icon" src="photos/pizza-png.png" alt=""></a>
 </div>
-<div class="name">
-    <h1>Leah Forrest</h1>
+<div class="bixbox">
+    <div class="intro">
+        <h1>Hi,</h1>
+        <h2>my name is</h2>
+        <h1>Leah Forrest</h1>
+    </div>
+    <div class="selfie-box">
+        <img class="selfie" src="photos/me.jpg" alt="photo of me">
+    </div>
+    <div class="black-box-1">
+        <p>
+            My area of interest is web development, and I'm hoping to move into data analytics or engineering at a later time!  My current field of work is at a fitness gym where I strive to better myself and others to help everyone feel more confident in themselves.
+        </p>
+        <div class="spacer"></div>
+        <p>My work:</p>
+        <div class="spacer"></div>
+        <div class="hover-photos">
+            <a href="https://leaferst.github.io/strawmilk/"><img src="photos/straw-milk-boi.png" alt=""></a>
+            <a href="https://leaferst.github.io/whale-website/"><img src="photos/whale-boi.png" alt=""></a>
+            <a href="https://leaferst.github.io/kitty-template/"><img src="https://media.tenor.com/images/8af08a3556c6e66f5ce88539183efd23/tenor.gif" alt=""></a>
+        </div>
+    </div>
+    <div class="spacer"></div>
+    <div class="black-box-1">
+        <p>About Me</p>
+        <div class="spacer"></div>
+        <div class="">
+            <img src="photos/workout.jpg" alt="">
+            <img src="photos/lola.jpeg" alt="">
+            <img src="photos/Neo.jpeg" alt="">
+        </div>
+    </div>
+    <div class="spacer"></div>
+    <div class="black-box-1">
+        <div class="contact-form">
+            <p>Contact Form</p>
+            <form>
+                <label for="fname"></label>
+            </form>
+        </div>
+    </div>
 </div>
-<div class="">
-
-</div>
-
 
     <script src="index.js"></script>
 </body>
